# qdb-api-php

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  batch.c  batch.h  batch_result.c  batch_result.h  class_definition.c  class_definition.h  cluster.c  cluster.h  cluster_params.c  cluster_params.h  common_params.c  common_params.h  config.m4  config.w32  exceptions.c  exceptions.h  getting_started.c  globals.c  globals.h  log.c  log.h  package.xml  php_qdb.c  php_qdb.h  qdb.i  qdb.php  qdb_php_wrapper.c  queue.c  queue.h  settings.c  settings.h
doc/: Compilation.php  Compiling.md  Configuration.md  Configuration.php  Installation.md  Installation.php  Installing.md  Introduction.php  QdbAliasAlreadyExistsException.php  QdbAliasNotFoundException.php  QdbBatch.md  QdbBatch.php  QdbBatchResult.php  QdbBlob.md  QdbBlob.php  QdbCluster.md  QdbCluster.php  QdbConnectionException.php  QdbContainerEmptyException.php  QdbDeque.php  QdbEmptyContainerException.php  QdbEntry.php  QdbEntryCollection.php  QdbException.php  QdbExpirableEntry.php  QdbHashSet.md  QdbHashSet.php  QdbIncompatibleTypeException.php  QdbInputException.php  QdbInteger.md  QdbInteger.php  QdbOperationDisabledException.php  QdbOperationException.php  QdbProtocolException.php  QdbQuery.php  QdbQueryPoint.php  QdbQueryTable.php  QdbQueue.md  QdbQueue.php  QdbSystemException.php  (+5 more)
doc-theme/: @elementlist.latte  @layout.latte  class.latte  config.neon  function.latte  overview.latte
doc-theme/js/: main.js
doc-theme/resources/: style.css
scripts/: build-generic.bat  build-unix.sh  build-win32-nts.bat  build-win32-ts.bat  build-win64-nts.bat  build-win64-ts.bat  clean.bat  generate-doc.bat  generate-doc.sh  ubuntu-build-from-scratch.sh
scripts/release/: set_version.sh
src/: QdbBatch.c  QdbBatch.h  QdbBatchResult.c  QdbBatchResult.h  QdbBlob.c  QdbBlob.h  QdbCluster.c  QdbCluster.h  QdbDeque.c  QdbDeque.h  QdbEntry.c  QdbEntry.h  QdbEntryCollection.c  QdbEntryCollection.h  QdbEntryFactory.c  QdbEntryFactory.h  QdbExpirableEntry.c  QdbExpirableEntry.h  QdbHashSet.c  QdbHashSet.h  QdbInteger.c  QdbInteger.h  QdbLastError.c  QdbLastError.h  QdbQuery.c  QdbQuery.h  QdbQueryPoint.c  QdbQueryPoint.h  QdbQueryTable.c  QdbQueryTable.h  QdbQueue.c  QdbTag.c  QdbTag.h  QdbTagCollection.c  QdbTagCollection.h  QdbTimestamp.c  QdbTimestamp.h  QdbTsBatchColumnInfo.c  QdbTsBatchColumnInfo.h  QdbTsBatchTable.c  (+34 more)
test/: .gitignore  CMakeLists.txt  PhpInfoTest.php  QdbBatchCompareAndSwapTest.php  QdbBatchGetRemoveTest.php  QdbBatchGetTest.php  QdbBatchGetUpdateTest.php  QdbBatchPutTest.php  QdbBatchRemoveIfTest.php  QdbBatchRemoveTest.php  QdbBatchResultTest.php  QdbBatchUpdateTest.php  QdbClusterCompareAndSwapTest.php  QdbClusterConstuctTest.php  QdbClusterExpiresAtTest.php  QdbClusterExpiresFromNowTest.php  QdbClusterGetExpiryTimeTest.php  QdbClusterGetQueueTest.php  QdbClusterGetRemoveTest.php  QdbClusterGetTest.php  QdbClusterGetUpdateTest.php  QdbClusterPutTest.php  QdbClusterRemoveIfTest.php  QdbClusterRemoveTest.php  QdbClusterRunBatchTest.php  QdbClusterUpdateTest.php  QdbQueuePopBackTest.php  QdbQueuePopFrontTest.php  QdbQueuePushBackTest.php  QdbQueuePushFrontTest.php  QdbTestBase.php  bootstrap.php
test/QdbBatch/: QdbBatchCompareAndSwapTest.php  QdbBatchConstructTest.php  QdbBatchGetAndRemoveTest.php  QdbBatchGetAndRemoveTest.php.disabled  QdbBatchGetAndUpdateTest.php  QdbBatchGetRemoveTest.php  QdbBatchGetTest.php  QdbBatchGetUpdateTest.php  QdbBatchPutTest.php  QdbBatchRemoveIfTest.php  QdbBatchRemoveIfTest.php.disabled  QdbBatchRemoveTest.php  QdbBatchRemoveTest.php.disabled  QdbBatchResultTest.php  QdbBatchTestBase.php  QdbBatchUpdateTest.php
test/QdbBlob/: QdbBlobAddTagTest.php  QdbBlobAndGetUpdateTest.php  QdbBlobAttachTagTest.php  QdbBlobAttachTagsTest.php  QdbBlobCompareAndSwapTest.php  (+17 more)
(+55 files in other folders)
